--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/extension-color": "^3.10.5",
+    "@tiptap/extension-text-align": "^3.10.5",
+    "@tiptap/extension-text-style": "^3.10.5",
+    "@tiptap/extension-underline": "^3.10.5",
+    "@tiptap/react": "^3.10.5",
+    "@tiptap/starter-kit": "^3.10.5",
+    "@types/file-saver": "^2.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
     "i18next": "^25.6.2",
     "lucide-react": "^0.553.0",
+    "mammoth": "^1.11.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "pizzip": "^3.1.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-i18next": "^16.3.0",
