--- a/userData/model-configs.json
+++ b/userData/model-configs.json
@@ -3,25 +3,25 @@
     {
       "apiKey": "sk-a5f209d824d54b6883fbc397f9fb4e28",
       "apiUrl": "https://dashscope.aliyuncs.com/compatible-mode/v1",
-      "createdAt": "2025-11-14T06:37:44.793519Z",
-      "id": "model_1763073464.793519",
-      "isDefault": false,
-      "isEnabled": false,
-      "modelName": "qwen-max-latest",
-      "name": "Qwen Max (Default)",
-      "updatedAt": "2025-11-14T06:45:58.653Z"
+      "createdAt": "2024-11-14T10:00:01.000000+00:00",
+      "id": "model_1731579601.000000",
+      "isDefault": true,
+      "isEnabled": true,
+      "modelName": "deepseek-v3",
+      "name": "DeepSeek V3",
+      "updatedAt": "2024-11-14T10:00:01.000000+00:00"
     },
     {
       "apiKey": "sk-a5f209d824d54b6883fbc397f9fb4e28",
       "apiUrl": "https://dashscope.aliyuncs.com/compatible-mode/v1",
-      "createdAt": "2025-11-14T06:45:53.663Z",
-      "id": "model_1763102753663_kyli8q9",
+      "createdAt": "2024-11-14T10:00:00.000000+00:00",
+      "id": "model_1731579600.000000",
       "isDefault": false,
       "isEnabled": true,
-      "modelName": "deepseek-v3",
-      "name": "deepseek-v3",
-      "updatedAt": "2025-11-14T06:46:32.693Z"
+      "modelName": "qwen-max-latest",
+      "name": "Qwen Max",
+      "updatedAt": "2024-11-14T10:00:00.000000+00:00"
     }
   ],
-  "defaultModelId": null
+  "defaultModelId": "model_1731579601.000000"
 }
