--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/react": "^3.10.5",
     "@tiptap/starter-kit": "^3.10.5",
     "@types/file-saver": "^2.0.7",
+    "@types/turndown": "^5.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docx": "^9.5.1",
@@ -34,6 +35,7 @@
     "i18next": "^25.6.2",
     "lucide-react": "^0.553.0",
     "mammoth": "^1.11.0",
+    "marked": "^17.0.1",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
     "pizzip": "^3.1.7",
@@ -43,7 +45,8 @@
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "turndown": "^7.2.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
